Merged source of ver 7.0.0